# test1-PL1

binary_search/: bsearch.cpp  gbsearch.cpp  gbsearch.h
filter/: filter.cpp  input.txt  output.txt
generic_min/generic_min/: README.md
generic_min/generic_min/version_0/: CMakeLists.txt  README.md
generic_min/generic_min/version_0/src/: driver_min.cpp
generic_min/generic_min/version_1/: README.md
generic_min/generic_min/version_1/src/: driver_min.cpp
generic_min/generic_min/version_2/: CMakeLists.txt  README.md
generic_min/generic_min/version_2/src/: driver_min.cpp
generic_min/generic_min/version_3/: README.md
generic_min/generic_min/version_3/app_smallest/: CMakeLists.txt
generic_min/generic_min/version_3/app_smallest/include/: driver_min.h  min.h
generic_min/generic_min/version_3/app_smallest/src/: driver_min.cpp
generic_min/generic_min/version_3/dev_lib_min/: CMakeLists.txt
generic_min/generic_min/version_3/dev_lib_min/src/: min.cpp
generic_min/generic_min/version_qsort/: CMakeLists.txt  README.md
generic_min/generic_min/version_qsort/include/: driver_sort.h
generic_min/generic_min/version_qsort/src/: driver_sort.cpp
questions/Q1/: Q1.cpp  quest1
questions/Q3/: Q3.cpp  input.txt  quest3
